# advent-of-code

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/aoc2020/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d16.rs  d17.rs  d2.rs  d3.rs  d4.rs  d9.rs  mod.rs
src/aoc2021/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  mod.rs
src/aoc2023/: d01.rs  d02.rs  d03.rs  d04.rs  mod.rs
src/aoc2024/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  mod.rs
src/days/: d1.rs  d17.rs  d2.rs  d5.rs  d7.rs  mod.rs
