[package]
name = "advent-of-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["time"] }
prse = "1.0.3"
clap ={ version = "4.4.8", features = ["cargo"] }
