[package]
name = "advent-of-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.41" 
tracing-subscriber = { version = "0.3.19", features = ["time"] }
prse = "1.2.1"
clap ={ version = "4.5.21", features = ["cargo"] }
time = "=0.3.36"
